--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,12 @@
+<% if @book.errors.any? %>
+   <ul>
+     <% @book.errors.full_messages.each do |message|%>
+       <li><%=message%></li>
+     <%end%>
+   </ul>
+<%end%>
 <h1>Books</h1>
+
 <%@books.each do |book|%>
 <%=book.title%>
 <%=book.body%>
